--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,21 @@
-pydub==0.25.1
+# Core requirements
+PyQt6>=6.5.0          # GUI framework
+pydub>=0.25.1         # Audio processing library
+numpy>=1.20.0         # Numerical computations
+matplotlib>=3.5.0     # For audio visualization
+tqdm>=4.62.0          # Progress bars (used in CLI)
+
+# Optional performance enhancements
+numba>=0.56.4         # JIT compilation for silence detection
+scipy>=1.10.0         # For advanced audio filters
+pyloudnorm>=0.1.0     # For LUFS normalization
+psutil>=5.9.0         # For system resource monitoring
+
+# Development and build tools
+pytest>=7.0.0         # For unit testing
+pyinstaller>=6.0.0    # For creating executables
+pillow>=10.0.0        # For icon creation/image processing
+
+# Additional dependencies
+PyQt6-Qt6>=6.5.0      # Qt6 binaries for PyQt6
+PyQt6-sip>=13.5.0     # SIP bindings for PyQt6
